--- a/assemble/pom.xml
+++ b/assemble/pom.xml
@@ -11,23 +11,22 @@
   <packaging>war</packaging>
   <name>assemble Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <build>
+		<finalName>ROOT</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+					<path>/</path>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+  
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>javax.servlet-api</artifactId>
-    	<version>4.0.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>jstl</groupId>
-    	<artifactId>jstl</artifactId>
-    	<version>1.1.2</version>
-    </dependency>
+    
     
     
     <dependency>
@@ -36,7 +35,6 @@
     	<version>${project-version}</version>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>assemble</finalName>
-  </build>
+  
+  
 </project>
