--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -8,6 +8,7 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>biz</artifactId>
+  <version>1.1</version>
   <name>biz</name>
   <url>http://maven.apache.org</url>
   <properties>
