--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -8,6 +8,7 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>dao</artifactId>
+  <version>1.1</version>
   <name>dao</name>
   <url>http://maven.apache.org</url>
   <properties>
