--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,16 +8,13 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>web</artifactId>
+  <version>1.1</version>
   <name>web</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-webmvc</artifactId>
-    	<version>4.1.2.RELEASE</version>
-    </dependency>
+    
   </dependencies>
 </project>
