--- a/pom.xml
+++ b/pom.xml
@@ -18,27 +18,11 @@
 	<packaging>pom</packaging>
 
 	<properties>
-
-	<project-version>1.1-SNAPSHOT</project-version>
+	<project.version>1.1-SNAPSHOT</project.version>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
 	<dependencies>
-			<dependency>
-                <groupId>com.zach.online</groupId>
-                <artifactId>web</artifactId>
-                <version>${project-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zach.online</groupId>
-                <artifactId>dao</artifactId>
-                <version>${project-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zach.online</groupId>
-                <artifactId>biz</artifactId>
-                <version>${project-version}</version>
-            </dependency>
-	
 			<dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -64,6 +48,21 @@
     	<artifactId>spring-webmvc</artifactId>
     	<version>4.1.2.RELEASE</version>
     </dependency>
+      <dependency>
+      	<groupId>com.zach.online</groupId>
+      	<artifactId>web</artifactId>
+      	<version>${project.version}</version>
+      </dependency>
+      <dependency>
+      	<groupId>com.zach.online</groupId>
+      	<artifactId>biz</artifactId>
+      	<version>${project.version}</version>
+      </dependency>
+      <dependency>
+      	<groupId>com.zach.online</groupId>
+      	<artifactId>dao</artifactId>
+      	<version>${project.version}</version>
+      </dependency>
 	</dependencies>
 	
     <repositories>  
