--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.zach.online</groupId>
@@ -8,13 +8,15 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>web</artifactId>
-  <version>1.1</version>
+  <version>${project.version}</version>
   <name>web</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
-    
+
+  <dependency>
+  	<groupId>org.springframework</groupId>
+  	<artifactId>spring-webmvc</artifactId>
+  	<version>4.1.2.RELEASE</version>
+  </dependency>
   </dependencies>
 </project>
