--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -8,7 +8,7 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>biz</artifactId>
-  <version>1.1</version>
+  <version>${project.version}</version>
   <name>biz</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -21,5 +21,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      	<groupId>com.zach.online</groupId>
+      	<artifactId>dao</artifactId>
+      	<version>${project.version}</version>
+      </dependency>
   </dependencies>
 </project>
