--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -8,7 +8,7 @@
     <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>dao</artifactId>
-  <version>1.1</version>
+  <version>${project.version}</version>
   <name>dao</name>
   <url>http://maven.apache.org</url>
   <properties>
