--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,5 +18,10 @@
   	<artifactId>spring-webmvc</artifactId>
   	<version>4.1.2.RELEASE</version>
   </dependency>
+  <dependency>
+      	<groupId>com.zach.online</groupId>
+      	<artifactId>biz</artifactId>
+      	<version>${project.version}</version>
+      </dependency>
   </dependencies>
 </project>
